CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.10

	- Documentation fixes (STR #2994, STR #2995)
	- The compression option was not being encoded properly
	  (STR #2997)
	- Added a missing character map for JIS-X0213/ShiftJIS.
	- The scheduler now rejects ATTR: messages with empty values.
	- The scheduler could consume all CPU handling closed connections
	  (STR #2988)
	- The scheduler now protects against DNS rebinding attacks on
	  localhost.
	- SECURITY: The PNG image reading code did not validate the
	  image size properly, leading to a potential buffer overflow
	  (STR #2974)
	- Fixed some configure script bugs with rc/xinetd directories
	  (STR #2970)
	- The Epson sample driver PPDs contained errors (STR #2979)


CHANGES IN CUPS V1.3.9

	- SECURITY: The HP-GL/2 filter did not range check pen numbers
	  (STR #2911)
	- SECURITY: The SGI image file reader did not range check
	  16-bit run lengths (STR #2918)
	- SECURITY: The text filter did not range check cpi, lpi, or
	  column values (STR #2919)
	- Documentation updates (STR #2904, STR #2944)
	- The French web admin page was never updated (STR #2963)
	- The IPP backend did not retry print jobs when the printer
	  reported itself as busy or unavailable (STR #2951)
	- The "Set Allowed Users" web interface did not handle trailing
	  whitespace correctly (STR #2956)
	- The PostScript filter did not work with Adobe applications
	  using custom page sizes (STR #2968)
	- The Mac OS X USB backend did not work with some printers
	  that reported a bad 1284 device ID.
	- The scheduler incorrectly resolved the client connection
	  address when HostNameLookups was set to Off (STR #2946)
	- The IPP backend incorrectly stopped the local queue if
	  the remote server reported the "paused" state.
	- The cupsGetDests() function did not catch all types of
	  request errors.
	- The scheduler did not always log "job queued" messages
	  (STR #2943)
	- The scheduler did not support destination filtering using